# CLI-Templater

./: .gitignore  README.md  pyproject.toml
src/: config.py  main.py
src/commands/: apply.py  create.py  list.py  remove.py  use.py
src/exceptions/: base.py  steps.py  templates.py
src/models/: __init__.py  template.py
src/models/template_components/: __init__.py  base.py  variable.py
src/models/template_components/steps/: __init__.py  base_step.py  step_meta.py  step_types.py
tests/template_tests/: test_steps.py
